--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
+		"dev": "npx concurrently -k -n COMPILER,NODEMON -c yellow,blue \"tsc -w\" \"nodemon -w dist -q dist/index.js\"",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"concurrently": "^6.5.1",
 		"nodemon": "^2.0.15",
 		"typescript": "^4.5.4"
 	}
